feat: implement InsuranceCardController
some tests passed some didn't idk why lol